# mlops-zoomcamp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
01-intro/: homework.ipynb
02-experiment-tracking/: homework.ipynb
02-experiment-tracking/scripts/: hpo.py  register_model.py  train.py
03-orchestration/: homework.ipynb
03-orchestration/mlops/: docker-compose.yml
03-orchestration/mlops/mlops/: metadata.yaml  settings.yaml
03-orchestration/mlops/mlops/homework_03/data_exporters/: log.py
03-orchestration/mlops/mlops/homework_03/data_loaders/: ingest.py
03-orchestration/mlops/mlops/homework_03/pipelines/homework_03/: metadata.yaml
03-orchestration/mlops/mlops/homework_03/transformers/: train.py  transform.py
04-deployment/: homework.ipynb
04-deployment/homework/: Dockerfile  Pipfile  predict.py  starter.ipynb
05-monitoring/: baseline_model_nyc_taxi_data.ipynb  evidently_metrics_calculation.py  homework.ipynb
05-monitoring/config/: grafana_dashboards.yaml  grafana_datasources.yaml
05-monitoring/dashboards/: metrics.json
06-best-practices/: homework.ipynb
06-best-practices/homework/: batch.py  docker-compose.yaml  integration_test.py
06-best-practices/homework/tests/: test_batch.py
