[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "MLOps Zoomcamp homreworks"
authors = ["Begoña Echavarren"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scikit-learn = "^1.4.2"
ruff = "^0.4.4"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B905", "B008"]